[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
known_first_party = ["tophu"]

[tool.mypy]
python_version = "3.7"
plugins = ["numpy.typing.mypy_plugin"]
ignore_missing_imports = true
