[metadata]
name = tophu
version = attr: tophu.__version__
license = Apache-2.0
license_files = LICENSE

[options]
package_dir = =src
packages = find:
setup_requires = setuptools>=42
install_requires = numpy>=1.21
python_requires = >=3.8
tests_require = pytest>=5.0

[options.packages.find]
where = src
