[metadata]
name = tophu
version = attr: tophu.__version__
description = Multi-scale 2-D phase unwrapping
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opera-adt/tophu
license = BSD-3-Clause OR Apache-2.0
license_files = LICENSE
keywords =
    insar
    phase-unwrapping
    remote-sensing
    sar
    snaphu
    synthetic-aperture-radar

[options]
package_dir = =src
packages = find:
setup_requires = setuptools>=42
install_requires =
    isce3>=0.6
    numpy>=1.21
    rasterio>=1.0
    scipy>=1.5
python_requires = >=3.8
tests_require = pytest>=6.0

[options.packages.find]
where = src

[flake8]
max-line-length = 88
show_source = True
exclude = __init__.py
